--- a/css/partials/_buttons.scss
+++ b/css/partials/_buttons.scss
@@ -6,6 +6,7 @@
   cursor: pointer;
   transition: 0.5s ease-in;
   padding: 15px;
+  text-decoration: none;
 
   &:hover{
     color: $primary-dark;
