--- a/css/partials/_layout.scss
+++ b/css/partials/_layout.scss
@@ -146,39 +146,32 @@ $container-s: 540px;
   overflow: hidden;
 }
 
-//Hero
-
 .hero {
   background: linear-gradient(180deg, #f3d7df 0%, rgba(255, 226, 234, 0.5) 83.7%, rgba(229, 239, 255, 0) 100%);
 }
 
-.red {
-  background-color: red;
-}
-
-.content-video{
+.content-video {
   position: relative;
-  
 
-  img{
+  img {
     position: absolute;
     z-index: -1;
   }
 }
 
-.symbol-biggest{
+.symbol-biggest {
   top: -220px;
   left: -70px;
   height: 600px;
 }
 
-.symbol-normal{
+.symbol-normal {
   top: 400px;
   left: 100px;
   height: 150px;
 }
 
-.symbol-small{
+.symbol-small {
   top: 280px;
   left: -500px;
   height: 76px;
@@ -208,17 +201,19 @@ $container-s: 540px;
   }
 }
 
-.content-about-2{
-  img{
+.content-about-2 {
+  img {
     height: 500px;
+    border-radius: 45px;
   }
 }
 
-ul, li{
+ul,
+li {
   list-style: none;
 }
 
-.check{
+.check {
   background-color: #fff;
   width: 60px;
   height: 60px;
@@ -227,7 +222,132 @@ ul, li{
   justify-content: center;
   align-items: center;
 
-  img{
+  box-shadow: 0px 3.204559087753296px 5.026759624481201px 0px #EF435807;
+
+  box-shadow: 0px 8.860197067260742px 13.898346900939941px 0px #EF43580A;
+
+  box-shadow: 0px 21.331939697265625px 33.46186447143555px 0px #EF43580D;
+
+  box-shadow: 0px 70.75956726074219px 110.99540710449219px 0px #EF435814;
+
+  img {
     width: 30px;
+  }
+}
+
+.card {
+  width: 425px;
+  height: 330px;
+  border-radius: 50px;
+  background-color: $primary-extra-light;
+  box-shadow: 0px 4px 4px 0px #00000040;
+  padding: 30px;
+
+  img {
+    height: 56px;
+    width: 56px;
+    border-radius: 28px;
+  }
+}
+
+.small-images {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+
+  img {
+    width: 315px;
+    height: 300px;
+    border-radius: 20px;
+    margin-top: 25px;
+    margin-right: 25px;
+  }
+}
+
+.contact {
+  background: linear-gradient(180deg, rgba(250, 226, 233, 0) 0%, #FEE3EA 100%);
+}
+
+.content-contact-symbols {
+  display: flex;
+  position: relative;
+}
+
+.symbol-1 {
+  position: absolute;
+  top: -150px;
+  left: -200px;
+  transform: rotate(180deg);
+  
+}
+
+.symbol-2 {
+  position: absolute;
+  top: 50px;
+  left: 240px;
+ 
+}
+
+.symbol-3 {
+  position: absolute;
+  top: 150px;
+  left: -60px;
+ 
+}
+
+footer {
+  background: linear-gradient(220.94deg, #FF81AE 14.43%, #EF4358 85.28%);
+}
+
+.content-footer{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+
+  div{
+
+    strong{
+      font-weight: 700;
+      font-family: 'Inter', sans-serif;
+      color: #fff;
+      font-size: 18px;
+    }
+
+    span{
+      color: #fff;
+      font-family: 'Inter', sans-serif;
+      font-size: 16px;
+    }
+  }
+}
+
+.logo-white {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+
+  h3 {
+    color: #fff;
+  }
+
+  img {
+    margin: 0 auto;
+    height: 100px;
+    width: 60px;
+    margin-right: 20px;
+  }
+}
+
+.content-footer-icons{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+
+  img{
+    width: 32px;
+    height: 32px;
+    margin-right: 15px;
   }
 }
