--- a/css/styles.css
+++ b/css/styles.css
@@ -155,10 +155,6 @@
   background: linear-gradient(180deg, #f3d7df 0%, rgba(255, 226, 234, 0.5) 83.7%, rgba(229, 239, 255, 0) 100%);
 }
 
-.red {
-  background-color: red;
-}
-
 .content-video {
   position: relative;
 }
@@ -215,9 +211,11 @@
 
 .content-about-2 img {
   height: 500px;
+  border-radius: 45px;
 }
 
-ul, li {
+ul,
+li {
   list-style: none;
 }
 
@@ -235,10 +233,160 @@ ul, li {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-shadow: 0px 3.204559087753296px 5.026759624481201px 0px #EF435807;
+          box-shadow: 0px 3.204559087753296px 5.026759624481201px 0px #EF435807;
+  -webkit-box-shadow: 0px 8.860197067260742px 13.898346900939941px 0px #EF43580A;
+          box-shadow: 0px 8.860197067260742px 13.898346900939941px 0px #EF43580A;
+  -webkit-box-shadow: 0px 21.331939697265625px 33.46186447143555px 0px #EF43580D;
+          box-shadow: 0px 21.331939697265625px 33.46186447143555px 0px #EF43580D;
+  -webkit-box-shadow: 0px 70.75956726074219px 110.99540710449219px 0px #EF435814;
+          box-shadow: 0px 70.75956726074219px 110.99540710449219px 0px #EF435814;
 }
 
 .check img {
   width: 30px;
+}
+
+.card {
+  width: 425px;
+  height: 330px;
+  border-radius: 50px;
+  background-color: #FFF3F5;
+  -webkit-box-shadow: 0px 4px 4px 0px #00000040;
+          box-shadow: 0px 4px 4px 0px #00000040;
+  padding: 30px;
+}
+
+.card img {
+  height: 56px;
+  width: 56px;
+  border-radius: 28px;
+}
+
+.small-images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.small-images img {
+  width: 315px;
+  height: 300px;
+  border-radius: 20px;
+  margin-top: 25px;
+  margin-right: 25px;
+}
+
+.contact {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(250, 226, 233, 0)), to(#FEE3EA));
+  background: linear-gradient(180deg, rgba(250, 226, 233, 0) 0%, #FEE3EA 100%);
+}
+
+.content-contact-symbols {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.symbol-1 {
+  position: absolute;
+  top: -150px;
+  left: -200px;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.symbol-2 {
+  position: absolute;
+  top: 50px;
+  left: 240px;
+}
+
+.symbol-3 {
+  position: absolute;
+  top: 150px;
+  left: -60px;
+}
+
+footer {
+  background: linear-gradient(220.94deg, #FF81AE 14.43%, #EF4358 85.28%);
+}
+
+.content-footer {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.content-footer div strong {
+  font-weight: 700;
+  font-family: 'Inter', sans-serif;
+  color: #fff;
+  font-size: 18px;
+}
+
+.content-footer div span {
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+}
+
+.logo-white {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.logo-white h3 {
+  color: #fff;
+}
+
+.logo-white img {
+  margin: 0 auto;
+  height: 100px;
+  width: 60px;
+  margin-right: 20px;
+}
+
+.content-footer-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.content-footer-icons img {
+  width: 32px;
+  height: 32px;
+  margin-right: 15px;
 }
 
 h1 {
@@ -272,7 +420,7 @@ h2 {
 }
 
 h3 {
-  color: #232224;
+  color: #454446;
   font-family: "Montserrat", sans-serif;
   font-size: 36px;
   line-height: 120%;
@@ -382,6 +530,7 @@ strong {
   -webkit-transition: 0.5s ease-in;
   transition: 0.5s ease-in;
   padding: 15px;
+  text-decoration: none;
 }
 
 .item-link:hover {
@@ -848,6 +997,43 @@ header {
   margin-left: 25px;
 }
 
+.swiper {
+  width: 650px;
+  height: 420px;
+  position: relative;
+}
+
+.button-next {
+  width: 36px;
+  height: 36px;
+  cursor: pointer;
+  background-image: url("../../assets/svg/arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.button-prev {
+  width: 36px;
+  height: 36px;
+  cursor: pointer;
+  background-image: url("../../assets/svg/arrow.svg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.swiper-slide {
+  max-width: 650px;
+  padding: 24px 36px;
+  margin: 0px 16px;
+}
+
+.swiper-slide img {
+  max-width: 550px;
+  max-height: 420px;
+}
+
 .logo-mdo {
   -webkit-animation: logo 4s ease infinite alternate;
           animation: logo 4s ease infinite alternate;
@@ -892,17 +1078,74 @@ header {
 }
 
 .symbol-move-small {
-  -webkit-animation: symbol-move 3s ease 1s infinite alternate;
-          animation: symbol-move 3s ease 1s infinite alternate;
+  animation: symbol-move 4s ease 4s infinite alternate-reverse;
 }
 
 .symbol-move-normal {
-  -webkit-animation: symbol-move 3s ease 4s infinite alternate;
-          animation: symbol-move 3s ease 4s infinite alternate;
+  animation: symbol-move-2 4s ease 2s infinite alternate-reverse;
 }
 
 .symbol-move-biggest {
-  -webkit-animation: symbol-move 3s ease 2s infinite alternate;
-          animation: symbol-move 3s ease 2s infinite alternate;
+  animation: symbol-move 4s ease 0s infinite alternate-reverse;
+}
+
+@-webkit-keyframes symbol-move {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: translate3d(12px, 5px, 0);
+            transform: translate3d(12px, 5px, 0);
+    -webkit-transform: rotate(30deg);
+            transform: rotate(30deg);
+  }
+}
+
+@keyframes symbol-move {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: translate3d(12px, 5px, 0);
+            transform: translate3d(12px, 5px, 0);
+    -webkit-transform: rotate(30deg);
+            transform: rotate(30deg);
+  }
+}
+
+@-webkit-keyframes symbol-move-2 {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: translate3d(12px, 5px, 0);
+            transform: translate3d(12px, 5px, 0);
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+}
+
+@keyframes symbol-move-2 {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: translate3d(12px, 5px, 0);
+            transform: translate3d(12px, 5px, 0);
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
 }
 /*# sourceMappingURL=styles.css.map */
