finalizando layout mobile

--- a/css/partials/_buttons.scss
+++ b/css/partials/_buttons.scss
@@ -32,7 +32,7 @@
   }
 }
 
-button{
+.wpp-button{
   background: linear-gradient(220.94deg, $green-normal 14.43%, $green-dark 85.28%);
   border-radius: 14px;
   font-size: 18px;
