--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,12 @@
   background: linear-gradient(180deg, #f3d7df 0%, rgba(255, 226, 234, 0.5) 83.7%, rgba(229, 239, 255, 0) 100%);
 }
 
+@media screen and (max-width: 960px) {
+  .hero {
+    padding-bottom: 0 !important;
+  }
+}
+
 .content-video {
   position: relative;
 }
@@ -164,10 +170,22 @@
   z-index: -1;
 }
 
+@media screen and (max-width: 960px) {
+  .content-video {
+    padding: 16px 0;
+  }
+}
+
 .symbol-biggest {
   top: -220px;
   left: -70px;
   height: 600px;
+}
+
+@media screen and (max-width: 960px) {
+  .symbol-biggest {
+    display: none;
+  }
 }
 
 .symbol-normal {
@@ -176,10 +194,22 @@
   height: 150px;
 }
 
+@media screen and (max-width: 960px) {
+  .symbol-normal {
+    display: none;
+  }
+}
+
 .symbol-small {
   top: 280px;
   left: -500px;
   height: 76px;
+}
+
+@media screen and (max-width: 960px) {
+  .symbol-small {
+    display: none;
+  }
 }
 
 .responsive-video {
@@ -193,6 +223,52 @@
       -ms-flex-align: center;
           align-items: center;
   z-index: 9;
+}
+
+@media screen and (max-width: 960px) {
+  .responsive-video {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 399px) {
+  .responsive-video {
+    display: none;
+  }
+}
+
+.responsive-video .video {
+  width: 700px;
+  height: 400px;
+}
+
+@media only screen and (max-width: 1100px) {
+  .responsive-video .video {
+    width: 550px;
+    height: 350px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .responsive-video .video {
+    max-width: 400px;
+    max-height: 250px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .responsive-video {
+    width: 500px;
+    height: 200px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  #sobre > div {
+    margin: 0;
+  }
 }
 
 .content-about img {
@@ -209,9 +285,43 @@
   height: 325px;
 }
 
+@media screen and (max-width: 960px) {
+  .content-about {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  #sobre {
+    padding-bottom: 0px;
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .content-services {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  #servicos {
+    padding-top: 0px;
+  }
+}
+
 .content-about-2 img {
   height: 500px;
   border-radius: 45px;
+}
+
+@media screen and (max-width: 960px) {
+  .content-about-2 {
+    display: none;
+  }
 }
 
 ul,
@@ -230,6 +340,7 @@ li {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 10px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -247,20 +358,92 @@ li {
   width: 30px;
 }
 
+@media screen and (max-width: 1399px) {
+  .check {
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+  }
+  .check img {
+    width: 24px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .check {
+    width: 40px;
+    height: 40px;
+  }
+  .check img {
+    width: 18px;
+  }
+}
+
 .card {
-  width: 425px;
+  width: 400px;
   height: 330px;
   border-radius: 50px;
   background-color: #FFF3F5;
   -webkit-box-shadow: 0px 4px 4px 0px #00000040;
           box-shadow: 0px 4px 4px 0px #00000040;
   padding: 30px;
+  margin: 20px;
 }
 
 .card img {
   height: 56px;
   width: 56px;
   border-radius: 28px;
+}
+
+.clients {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+@media screen and (max-width: 960px) {
+  #clientes {
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  #reconhecimento {
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .hero-section {
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: reverse !important;
+        -ms-flex-direction: column-reverse !important;
+            flex-direction: column-reverse !important;
+  }
+  .hero-section .content-video {
+    margin-bottom: 100px;
+  }
+}
+
+@media only screen and (max-width: 960px) and (max-width: 399px) {
+  .hero-section .content-video {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .container-swiper {
+    display: none;
+  }
 }
 
 .small-images {
@@ -282,9 +465,48 @@ li {
   margin-right: 25px;
 }
 
+@media screen and (max-width: 1250px) {
+  .small-images {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .small-images {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+.big-image img {
+  border-radius: 20px;
+}
+
+@media screen and (max-width: 1250px) {
+  .big-image {
+    display: none;
+  }
+}
+
 .contact {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(250, 226, 233, 0)), to(#FEE3EA));
   background: linear-gradient(180deg, rgba(250, 226, 233, 0) 0%, #FEE3EA 100%);
+}
+
+@media screen and (max-width: 960px) {
+  .contact {
+    padding-top: 0 !important;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .logo-footer {
+    display: none;
+  }
 }
 
 .content-contact-symbols {
@@ -292,6 +514,12 @@ li {
   display: -ms-flexbox;
   display: flex;
   position: relative;
+}
+
+@media screen and (max-width: 960px) {
+  .content-contact-symbols {
+    display: none;
+  }
 }
 
 .symbol-1 {
@@ -387,6 +615,15 @@ footer {
   width: 32px;
   height: 32px;
   margin-right: 15px;
+}
+
+@media screen and (max-width: 960px) {
+  footer section {
+    -webkit-box-orient: horizontal !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: row !important;
+            flex-direction: row !important;
+  }
 }
 
 h1 {
@@ -558,7 +795,7 @@ strong {
           transform: scale(1.03);
 }
 
-button {
+.wpp-button {
   background: linear-gradient(220.94deg, #4DC95C 14.43%, #32BA46 85.28%);
   border-radius: 14px;
   font-size: 18px;
@@ -587,7 +824,7 @@ button {
           box-shadow: 0px 17px 17px rgba(80, 196, 80, 0.13), 0px 5.125px 5.125px rgba(80, 196, 80, 0.085), 0px 2.12866px 2.12866px rgba(103, 196, 80, 0.065), 0px 0.7699px 0.7699px rgba(80, 196, 138, 0.045);
 }
 
-button:hover {
+.wpp-button:hover {
   -webkit-box-shadow: 0px 17px 17px rgba(80, 196, 80, 0.13), 0px 5.125px 5.125px rgba(80, 196, 80, 0.085), 0px 2.12866px 2.12866px rgba(103, 196, 80, 0.065), 0px 0.7699px 0.7699px rgba(80, 196, 138, 0.045);
           box-shadow: 0px 17px 17px rgba(80, 196, 80, 0.13), 0px 5.125px 5.125px rgba(80, 196, 80, 0.085), 0px 2.12866px 2.12866px rgba(103, 196, 80, 0.065), 0px 0.7699px 0.7699px rgba(80, 196, 138, 0.045);
   -webkit-transform: scale(1.03);
@@ -595,7 +832,7 @@ button:hover {
   opacity: 0.9;
 }
 
-button img {
+.wpp-button img {
   width: 24px;
   height: 24px;
   margin-right: 10px;
@@ -908,6 +1145,7 @@ button img {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -944,6 +1182,12 @@ header {
   padding: 10px;
   z-index: 800;
   position: fixed;
+}
+
+@media screen and (max-width: 960px) {
+  header {
+    display: none;
+  }
 }
 
 .active-header {
@@ -987,14 +1231,30 @@ header {
           justify-content: flex-start;
 }
 
-@media screen and (max-width: 960px) {
-  .menu-desktop {
-    display: none;
-  }
-}
-
 .menu-desktop li {
   margin-left: 25px;
+}
+
+.navbar-mobile {
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 10px 24px;
+  display: none;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+@media screen and (max-width: 960px) {
+  .navbar-mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .swiper {
