--- a/css/styles.css
+++ b/css/styles.css
@@ -423,6 +423,18 @@ li {
 
 @media screen and (max-width: 960px) {
   #clientes {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  #depoimentos {
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  #curso {
     padding-top: 0;
   }
 }
@@ -634,6 +646,10 @@ footer {
   margin-right: 15px;
 }
 
+footer section {
+  padding-bottom: 50px !important;
+}
+
 @media screen and (max-width: 960px) {
   footer section {
     -webkit-box-orient: horizontal !important;
@@ -641,6 +657,63 @@ footer {
         -ms-flex-direction: row !important;
             flex-direction: row !important;
   }
+}
+
+.curso {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  max-width: 800px;
+}
+
+.lm {
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+  color: white;
+  position: relative;
+  margin-top: 100px;
+}
+
+.lm a {
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  cursor: pointer;
+  font-weight: 700;
+  color: white;
+  text-decoration: none;
+}
+
+.lm a:hover {
+  text-decoration: underline;
+}
+
+.content-clients {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.content-clients img {
+  height: 92px;
+  width: 200px;
 }
 
 h1 {
@@ -804,6 +877,7 @@ strong {
   font-family: 'Inter', sans-serif;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
+  text-decoration: none;
 }
 
 .link-button:hover {
@@ -853,6 +927,43 @@ strong {
   width: 24px;
   height: 24px;
   margin-right: 10px;
+}
+
+.button-form {
+  background: linear-gradient(220.94deg, #EF4358 14.43%, #F9688B 85.28%);
+  border-radius: 14px;
+  font-size: 18px;
+  font-weight: 500;
+  font-family: 'Inter', sans-serif;
+  border: none;
+  text-decoration: none;
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+  line-height: 150%;
+  color: #fefbff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  padding: 12px 36px;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  -webkit-box-shadow: 0px 17px 17px rgba(196, 80, 177, 0.13), 0px 5.125px 5.125px rgba(196, 80, 177, 0.085), 0px 2.12866px 2.12866px rgba(196, 80, 177, 0.065), 0px 0.7699px 0.7699px rgba(196, 80, 177, 0.045);
+          box-shadow: 0px 17px 17px rgba(196, 80, 177, 0.13), 0px 5.125px 5.125px rgba(196, 80, 177, 0.085), 0px 2.12866px 2.12866px rgba(196, 80, 177, 0.065), 0px 0.7699px 0.7699px rgba(196, 80, 177, 0.045);
+}
+
+.button-form:hover {
+  -webkit-box-shadow: 0px 17px 17px rgba(196, 80, 177, 0.13), 0px 5.125px 5.125px rgba(196, 80, 177, 0.085), 0px 2.12866px 2.12866px rgba(196, 80, 177, 0.065), 0px 0.7699px 0.7699px rgba(196, 80, 177, 0.045);
+          box-shadow: 0px 17px 17px rgba(196, 80, 177, 0.13), 0px 5.125px 5.125px rgba(196, 80, 177, 0.085), 0px 2.12866px 2.12866px rgba(196, 80, 177, 0.065), 0px 0.7699px 0.7699px rgba(196, 80, 177, 0.045);
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
+  opacity: 0.9;
 }
 
 .s-0 {
@@ -1176,6 +1287,10 @@ body {
 svg, img {
   display: block;
   width: 100%;
+}
+
+a {
+  text-decoration: none;
 }
 
 header {
